[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
build = "build.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm3-8"]}
failure = "0.1.1"
lalrpop-util = { git = "https://github.com/Michael-F-Bryan/lalrpop", features = ["lexer"], branch = "custom-lexer" }
void = "1.0.2"
codespan = "0.1.1"

[build-dependencies]
lalrpop = "0.15.2"

[dev-dependencies]
pretty_assertions = "0.5.1"
